cabal-version:       3.0
name:                hoogleverse
version:             0.1.0.0
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable hoogleverse-main
  main-is:             Main.hs
  build-depends:       
    base,
    text,
    aeson,
    warp,
    http-client,
    lens,
    semigroups,
    monad-logger,
    optparse-applicative,
    profunctors,
    bifunctors,
    exceptions,
    file-embed,
    mtl,
    tagged,
    containers,
    streamly,
    beam-core,
    beam-postgres,
    beam-mysql,
    beam-sqlite,
    beam-migrate,
    shower
  default-language:    Haskell2010
  ghc-options: -Wall
